2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_ARG_ENABLE): Removed redundant option.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_ARG_WITH): Removed redundant option.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_STRUCT_TM): Removed redundant check.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_PATH_PROG): Don't look for cp, strip 
	and chmod.

	* Makefile.in, configure, lib/Makefile.in: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_PATH_PROG): Don't look for rm.

	* Makefile.in, configure, lib/Makefile.in: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Removed Sun CC task.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	PR 18986

	* lib/stdbool_.h, m4/stdbool.m4: New files from
	gnulib to support stdbool.h on platforms without it.

	* Makefile.in, aclocal.m4, config.h.in, configure,
	lib/Makefile.am, lib/Makefile.in, m4/gnulib-cache.m4,
	m4/gnulib-comp.m4: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Removed gnulib items.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	PR 18972

	* lib/getopt.c, lib/getopt1.c, lib/getopt_.h,
	lib/getopt_int.h, lib/unistd_.h, m4/getopt.m4,
	m4/unistd_h.m4: New files from gnulib to support 
	platforms without a GNU getopt implementation. 

	* jargrep.c: Moved inclusion of getopt.h before 
	inclusion of regex.h.

	* jartool.c: Include regex.h, as recommended by 
	gnulib-tool for the gnulib getopt functionality.

	* Makefile.in, aclocal.m4, config.h.in, configure,
	lib/Makefile.am, lib/Makefile.in, m4/gnulib-cache.m4,
	m4/gnulib-comp.m4: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* README: Added a 'platforms' section, and documented
	flags for the MingW32 build on Cygwin.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>
