@@ -1,5 +1,14 @@
 2007-02-07  Dalibor Topic  <robilad@kaffe.org>
 
+	* configure.ac (ZINCS, ZDEPS): Removed redundant variables.
+
+	* Makefile.am (DEPENDENCIES): Removed. 
+	(AM_CPPFLAGS) Removed redundant ZINCS variable.
+
+	* Makefile.in, configure, lib/Makefile.in: Regenerated.
+
+2007-02-07  Dalibor Topic  <robilad@kaffe.org>
+
 	* configure.ac (AC_ARG_ENABLE): Removed redundant option.
 
 	* configure: Regenerated.
